# egui_backend_selector

./: Cargo.toml  README.md
egui_backend_selector_test/: Cargo.toml
egui_backend_selector_test/examples/: auto_select.rs  demo.rs  force_eframe.rs  force_swr.rs
egui_backend_selector_test/examples/app/: app.rs
src/: implementation.rs  lib.rs
